--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<div class="header-text">
 							<h2>hi<span>,</span> i am <br> Divya <br> sri <span>.</span>   </h2>
 							<p>A Python Developer| Technical writter | Winner of HackMol 2.0 |CSE Undergrade</p>
-							<a href="https://divyasri77.github.io/Divyares.pdf" download>View my resume</a>
+							<a href="https://divyasri77.github.io/Divyares.pdf" >View my resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
