--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<div class="header-text">
 							<h2>hi<span>,</span> i am <br> Divya <br> sri <span>.</span>   </h2>
 							<p>A Python Developer| Technical writter | Winner of HackMol 2.0 |CSE Undergrade</p>
-							<a href="https://divyasri77.github.io/Divyares.pdf" >View my resume</a>
+							<a href="https://divyasri77.github.io/" download>View my resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
@@ -141,7 +141,7 @@
 											<h3>email</h3>
 											<p>divyasri7702@gmail.com</p>
 										</div>
-                  
+
 
 									</div>
 
@@ -406,6 +406,43 @@
 				<div class="experience-content">
 						<div class="main-timeline">
 							<ul>
+                <li>
+                  <div class="single-timeline-box fix">
+                    <div class="row">
+                      <div class="col-md-offset-1 col-md-5 experience-time-responsive">
+                        <div class="experience-time">
+                          <h2>
+                            <span><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            March 2021
+                          </h2>
+                          <h3>Girl Script Summer Of Code</h3>
+                        </div><!--/.experience-time-->
+                      </div><!--/.col-->
+                      <div class="col-md-5">
+                        <div class="timeline">
+                          <div class="timeline-content text-right">
+                            <h4 class="title">
+                              Girl Script Summer Of Code
+                            </h4>
+                            <h5></h5>
+                            <p class="description">
+                              Open Source Contributer
+                            </p>
+                          </div><!--/.timeline-content-->
+                        </div><!--/.timeline-->
+                      </div><!--/.col-->
+                      <div class="col-md-offset-1 col-md-5 experience-time-main">
+                        <div class="experience-time">
+                          <h2>
+                            <span><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            March 2021
+                          </h2>
+                          <h3>Freelance</h3>
+                        </div><!--/.experience-time-->
+                      </div><!--/.col-->
+                    </div>
+                  </div><!--/.single-timeline-box-->
+                </li>
 
 								<li>
 									<div class="single-timeline-box fix">
@@ -445,37 +482,90 @@
 									</div><!--/.single-timeline-box-->
 								</li>
 
-								<li>
+
+
+
+                <li>
 									<div class="single-timeline-box fix">
 										<div class="row">
-											<div class="col-md-5">
-												<div class="experience-time text-right">
-													<h2>Jan 2021</h2>
-													<h3>Mentor (Part time)</h3>
+											<div class="col-md-offset-1 col-md-5 experience-time-responsive">
+												<div class="experience-time">
+													<h2>
+														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+														Feb 2021
+													</h2>
+													<h3></h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
-											<div class="col-md-offset-1 col-md-5">
+											<div class="col-md-5">
 												<div class="timeline">
-													<div class="timeline-content">
+													<div class="timeline-content text-right">
 														<h4 class="title">
-															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-															Mentor at HackViolet Hackathon
+														Hackathon mentor at MariHack
 														</h4>
-														<h5>Virginia Tech</h5>
+														<h5></h5>
 														<p class="description">
-														Mentored young hackers over the weekend and guided their project ideas
+															24h High School & CEGEP Hackathon
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
 											</div><!--/.col-->
+											<div class="col-md-offset-1 col-md-5 experience-time-main">
+												<div class="experience-time">
+													<h2>
+														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+														Feb 2021
+													</h2>
+													<h3>Part time</h3>
+												</div><!--/.experience-time-->
+											</div><!--/.col-->
 										</div>
 									</div><!--/.single-timeline-box-->
 								</li>
+                <li>
+                  <div class="single-timeline-box fix">
+                    <div class="row">
+                      <div class="col-md-offset-1 col-md-5 experience-time-responsive">
+                        <div class="experience-time">
+                          <h2>
+                            <span><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            Jan 2021
+                          </h2>
+                          <h3></h3>
+                        </div><!--/.experience-time-->
+                      </div><!--/.col-->
+                      <div class="col-md-5">
+                        <div class="timeline">
+                          <div class="timeline-content text-right">
+                            <h4 class="title">
+                            Hackathon mentor at HackViolet
+                            </h4>
+                            <h5></h5>
+                            <p class="description">
+                              Mentored young hackers over the weekend and guided their project ideas
+                            </p>
+                          </div><!--/.timeline-content-->
+                        </div><!--/.timeline-->
+                      </div><!--/.col-->
+                      <div class="col-md-offset-1 col-md-5 experience-time-main">
+                        <div class="experience-time">
+                          <h2>
+                            <span><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            Jan 2021
+                          </h2>
+                          <h3>Part time</h3>
+                        </div><!--/.experience-time-->
+                      </div><!--/.col-->
+                    </div>
+                  </div><!--/.single-timeline-box-->
+                </li>
+
 
 							</ul>
 						</div><!--.main-timeline-->
 					</div><!--.experience-content-->
 			</div>
+
 
 		</section><!--/.experience-->
 		<!--experience end -->
@@ -633,8 +723,9 @@
                       <ul class="a">
                         <li>*DSC Code of Duty</li>
                         <li>*Hack the North</li>
-                        <li>*HackMol 2.O</li>
+                        <li>*HackMol 2.0</li>
                         <li>*HackNagpur</li>
+                        <li>*HackVerse 2.0</li>
                       </ul>
 
   									</div><!--/.timeline-content-->
@@ -654,6 +745,7 @@
   								<div class="timeline">
   									<div class="timeline-content">
                       <ul class="a">
+                        <li>*Coursera -Data Analysis using Python</li>
                         <li>*Coursera -Introduction to Git and Github</li>
                         <li>*Udemy -Website Designing</li>
                         <li>*HackerRank -Python(Basic)</li>
