--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 										</a>
 									</li><!-- / li -->
 									<li>
-										<a href="https://twitter.com/Divyasr07710841">
+										<a href="https://twitter.com/DS4divyasri">
 											<i class="fa fa-twitter" aria-hidden="true"></i>
 										</a>
 
