--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<div class="header-text">
 						<h2>hi<span>,</span> i am <br> Divya <br> sri <span>.</span> </h2>
 						<p>A Python Developer| Technical writter | Winner of HackMol 2.0 |CSE Undergrade</p>
-						<a href="https://bit.ly/3eXBpK1" download>View my resume</a>
+						<a href="https://drive.google.com/file/d/19HRiA2FEnm2QCwqzuJ0sSosRdsIg81N8/view?usp=sharing" download>View my resume</a>
 					</div>
 					<!--/.header-text-->
 				</div>
